# ExcelRegionExtractor

./: .gitignore  ALGORITHM_NOTES.md  Agent.md  BUILD.md  README.md  pyproject.toml
config/: default.json  hidden_print_demo.json
examples/: chart.xlsx  hidden_print_demo.xlsx  sample.xlsx  sample2.xlsx  synthetic_demo.xlsx  ve.xlsx
scripts/: 01_connected_components.py  02_projection_profile.py  03_region_growing.py  04_graph_union_find.py  05_hierarchical.py  06_dbscan_like.py  07_xy_cut.py  08_hybrid_pipeline.py  09_layout_plan.py  _common.py  run_all.py
src/excel_info_region/: __init__.py  borders.py  cells.py  chart_export.py  chart_regions.py  cli.py  components.py  config.py  default.json  extractor.py  image_export.py  image_regions.py  io.py  raw_drawing.py  runner.py  schema.py  visualize.py
src/excel_region_lab/: components.py  config.py  dbscan_like.py  hybrid.py  io.py  layout_plan.py  merge.py  profiles.py  runner.py  schema.py  scoring.py  signals.py  visualize.py  xy_cut.py
tests/: test_extractor_helpers.py  test_smoke.py
