[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-info-region-extractor"
version = "0.1.0"
description = "Extract information-region bounding boxes from Excel sheets without semantic labels"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "Pillow>=10.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
