[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-region-extractor"
version = "0.1.7"
description = "Extract information-region bounding boxes from Excel sheets without semantic labels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.0",
  "Pillow>=10.0.0"
]

[project.scripts]
excel-regions = "excel_info_region.cli:main"
excel-info-regions = "excel_info_region.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
excel_info_region = ["default.json"]
